--- a/catalogue/Dockerfile
+++ b/catalogue/Dockerfile
@@ -1,6 +1,6 @@
 FROM node:18.20.8-alpine3.21
 EXPOSE 8080
-RUN adduser -S roboshop && adduser -S roboshop -G roboshop
+RUN addgroup -S roboshop && adduser -S roboshop -G roboshop
 WORKDIR /opt/server
 RUN chmod roboshop:roboshop /opt/server
 USER roboshop
