--- a/catalogue/manifest.yaml
+++ b/catalogue/manifest.yaml
@@ -11,28 +11,31 @@ kind: Deployment
 metadata:
   name: catalogue
   namespace: roboshop
-  labels:  #label deployment labels
+  labels: # these labels are deployment labels
     app: catalogue
     project: roboshop
     tier: app
 spec:
   replicas: 1
   selector:
-    matchLabels:
+    matchLabels: # these labels are used to find the pods
       app: catalogue
       project: roboshop
       tier: app
   template:
     metadata:
-      labels:
+      labels: # these labels are pod labels
         app: catalogue
         project: roboshop
         tier: app
     spec:
       containers:
       - name: catalogue
-        image: rajesh028/catalogue:v1
-        imagePullPolicy: Always #always pulls the image from the repository
+        image: joindevops/catalogue:v1
+        imagePullPolicy: Always
+        envFrom:
+        - configMapRef:
+            name: catalogue
 ---
 apiVersion: v1
 kind: Service
@@ -45,19 +48,6 @@ spec:
     project: roboshop
     tier: app
   ports:
-    - protocol: TCP
-      port: 80   # service-port
-      targetPort: 80  # container-porton: v1 
-
-
-
-
-
-
-
-
-
-
-
-
-     
+  - protocol: TCP
+    port: 8080 #service-port
+    targetPort: 8080 #container-port
