--- a/catalogue/manifest.yaml
+++ b/catalogue/manifest.yaml
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
       - name: catalogue
-        image: joindevops/catalogue:v1
+        image: rajesh028/catalogue:v1
         imagePullPolicy: Always
         envFrom:
         - configMapRef:
