--- a/web/manifest.yaml
+++ b/web/manifest.yaml
@@ -1,122 +1,135 @@
-# apiVersion: v1
-# kind: ConfigMap
-# metadata:
-#   name: web
-#   namespace: roboshop
-# data:
-#   nginx.conf: |
-#     user www-data;
-#     worker_processes 4;
-#     pid /var/run/nginx.pid;
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: web
+  namespace: roboshop
+data:
+  nginx.conf: |
+    user www-data;
+    worker_processes 4;
+    pid /var/run/nginx.pid;
 
-#     events {
-#       worker_connections 768;
-#       # multi_accept on;
-#     }
+    events {
+      worker_connections 768;
+      # multi_accept on;
+    }
 
-#     http {
+    http {
 
-#       ##
-#       # Basic Settings
-#       ##
+      ##
+      # Basic Settings
+      ##
 
-#       sendfile on;
-#       tcp_nopush on;
-#       tcp_nodelay on;
-#       keepalive_timeout 65;
-#       types_hash_max_size 2048;
-#       large_client_header_buffers 6 32k;
-#       client_max_body_size 100m;
+      sendfile on;
+      tcp_nopush on;
+      tcp_nodelay on;
+      keepalive_timeout 65;
+      types_hash_max_size 2048;
+      large_client_header_buffers 6 32k;
+      client_max_body_size 100m;
 
-#       # server_names_hash_bucket_size 64;
-#       # server_name_in_redirect off;
-#       include /etc/nginx/mime.types;
-#       default_type application/octet-stream;
+      # server_names_hash_bucket_size 64;
+      # server_name_in_redirect off;
+      include /etc/nginx/mime.types;
+      default_type application/octet-stream;
 
-#       ##
-#       # Logging Settings
-#       ##
-#       access_log /var/log/nginx/access.log;
-#       error_log /var/log/nginx/error.log debug; # change from debug to warn or error for production
+      ##
+      # Logging Settings
+      ##
+      access_log /var/log/nginx/access.log;
+      error_log /var/log/nginx/error.log debug; # change from debug to warn or error for production
 
-#       ##
-#       # Gzip Settings
-#       ##
-#       gzip on;
-#       gzip_disable "msie6";
+      ##
+      # Gzip Settings
+      ##
+      gzip on;
+      gzip_disable "msie6";
 
-#       ##
-#       # Virtual Host Configs
-#       ##
+      ##
+      # Virtual Host Configs
+      ##
 
-#       include /etc/nginx/conf.d/*.conf;
-#       include /etc/nginx/sites-enabled/*;
+      include /etc/nginx/conf.d/*.conf;
+      include /etc/nginx/sites-enabled/*;
 
-#       server {
-#         listen       80;
-#         server_name  localhost;
+      server {
+        listen       80;
+        server_name  localhost;
 
-#         proxy_http_version 1.1;
+        proxy_http_version 1.1;
 
-#         #charset koi8-r;
-#         #access_log  /var/log/nginx/host.access.log  main;
-#         #error_log /dev/stdout debug;
-#         #rewrite_log on;
+        #charset koi8-r;
+        #access_log  /var/log/nginx/host.access.log  main;
+        #error_log /dev/stdout debug;
+        #rewrite_log on;
 
-#         location / {
-#             root   /usr/share/nginx/html;
-#             index  index.html index.htm;
-#             ssi    on;
-#         }
+        location / {
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+            ssi    on;
+        }
 
-#         location /images/ {
-#             expires 5s;
-#             root   /usr/share/nginx/html;
-#             try_files $uri /images/placeholder.png;
-#         }
+        location /images/ {
+            expires 5s;
+            root   /usr/share/nginx/html;
+            try_files $uri /images/placeholder.png;
+        }
 
-#         #error_page  404              /404.html;
+        #error_page  404              /404.html;
 
-#         # redirect server error pages to the static page /50x.html
-#         #
-#         error_page   500 502 503 504  /50x.html;
-#         location = /50x.html {
-#             root   /usr/share/nginx/html;
-#         }
+        # redirect server error pages to the static page /50x.html
+        #
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
+        }
 
 
-#     }
+    }
 
-#     } 
+    } 
 
-# ---
-# apiVersion: apps/v1
-# kind: Deployment
-# metadata:
-#   name: catalogue
-#   namespace: roboshop
-#   labels: # these labels are deployment labels
-#     app: catalogue
-#     project: roboshop
-#     tier: app
-# spec:
-#   replicas: 1
-#   selector:
-#     matchLabels: # these labels are used to find the pods
-#       app: catalogue
-#       project: roboshop
-#       tier: app
-#   template:
-#     metadata:
-#       labels: # these labels are pod labels
-#         app: catalogue
-#         project: roboshop
-#         tier: app
-#     spec:
-#       containers:
-#       - name: catalogue
-#         image: rajesh028/catalogue:v1
-#         imagePullPolicy: Always
-#         envFrom:
-#         - configMapRef:
-#             name: catalogue
+---
+apiVersion: apps/v1
+kind: Deployment
+metadata:
+  name: web
+  namespace: roboshop
+  labels: # these labels are deployment labels
+    app: web
+    project: roboshop
+    tier: web
+spec:
+  replicas: 1
+  selector:
+    matchLabels: # these labels are used to find the pods
+      app: web
+      project: roboshop
+      tier: web
+  template:
+    metadata:
+      labels: # these labels are pod labels
+        app: web
+        project: roboshop
+        tier: web
+    spec:
+      containers:
+      - name: web
+        image: rajesh028/web:v1
+        imagePullPolicy: Always
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: web
+  namespace: roboshop
+spec:
+  type: LoadBalancer
+  selector:
+    app: web
+    project: roboshop
+    tier: web
+  ports:
+  - protocol: TCP
+    port: 80 #service-port
+    targetPort: 80 #container-port        
