--- a/web/manifest.yaml
+++ b/web/manifest.yaml
@@ -117,6 +117,18 @@ spec:
       - name: web
         image: rajesh028/web:v1
         imagePullPolicy: Always
+        volumeMounts:
+        - name: nginx-conf
+          mountPath: /etc/nginx/nginx.conf
+          subPath: nginx.conf
+          readOnly: true
+      volumes:
+      - name: nginx-conf
+        configMap:
+          name: web
+          items:
+            - key: nginx.conf
+              path: nginx.conf
 ---
 apiVersion: v1
 kind: Service
