--- a/web/manifest.yaml
+++ b/web/manifest.yaml
@@ -84,6 +84,10 @@ data:
             root   /usr/share/nginx/html;
         }
 
+        location /api/catalogue/ {
+          proxy_pass http://catalogue:8080/;
+        }
+
 
     }
 
