--- a/shipping/manifest.yaml
+++ b/shipping/manifest.yaml
@@ -4,8 +4,8 @@ metadata:
   name: shipping
   namespace: roboshop
 data:
-   CART_ENDPOINT= "cart":8080
-   DB_HOST=mysql
+  CART_ENDPOINT: "cart:8080"
+  DB_HOST: mysql
 ---
 apiVersion: apps/v1
 kind: Deployment
