--- a/mysql/manifest.yaml
+++ b/mysql/manifest.yaml
@@ -13,9 +13,9 @@ metadata:
   namespace: roboshop
 type: Opaque
 data:
-  MYSQL_ROOT_PASSWORD: cm9ib3Nob3BAMQ==
-  MYSQL_USER: c2hpcHBpbmc=
-  MYSQL_PASSWORD: cm9ib3Nob3BAMQ==
+  MYSQL_ROOT_PASSWORD: cm9ib3Nob3BAMQo=
+  MYSQL_USER: c2hpcHBpbmcK
+  MYSQL_PASSWORD: cm9ib3Nob3BAMQo=
 ---
 apiVersion: apps/v1
 kind: Deployment
