--- a/user/manifest.yaml
+++ b/user/manifest.yaml
@@ -31,7 +31,7 @@ spec:
     spec:
       containers:
       - name: user
-        image: joindevops/user:v1
+        image: rajesh028/user:v1
         imagePullPolicy: Always
         envFrom:
         - configMapRef:
