--- a/rabbitmq/manifest.yaml
+++ b/rabbitmq/manifest.yaml
@@ -5,8 +5,8 @@ metadata:
   namespace: roboshop
 type: Opaque
 data:
-  RABBITMQ_DEFAULT_USER: 
-  RABBITMQ_DEFAULT_PASS: 
+  RABBITMQ_DEFAULT_USER: cm9ib3Nob3A=
+  RABBITMQ_DEFAULT_PASS: cm9ib3Nob3AxMjM=
 ---
 apiVersion: apps/v1
 kind: Deployment
