--- a/web/manifest.yaml
+++ b/web/manifest.yaml
@@ -100,6 +100,10 @@ data:
           proxy_pass http://shipping:8080/;
         }
 
+         location /api/payment/ {
+          proxy_pass http://payment:8080/;
+        }
+
 
     }
 
